2015-07-30  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Don't show ^R and ^T in the help
	lines in restricted mode (if possible), to give visual feedback.
	* src/*.c: Normalize the whitespace after the preceding changes.
	* src/nano.c (show_restricted_warning, say_there_is_no_help):
	Differentiate between something being disabled/restricted (because
	of the way of invocation) and help texts being unavailable (which
	is a compile-time decision).
	* src/global.c (shortcut_init): Change "Justify" to a tag and regroup.
	* src/nano.c (do_suspend_void, do_suspend): Provide feedback when
	suspension is not enabled; and it cannot be enabled in restricted
	mode any longer, so there is no need to check for that any more.

2015-07-29  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_linter): When the linter is called in restricted mode
	(possible when nano was built with --disable-speller), it is better to
	say that this function is disabled than that no linter was defined.
	* src/nano.c (usage): When asking for --help in restricted mode, don't
	show options that don't have any effect.
	* src/nano.c (do_toggle): Make the four toggles that don't have any
	effect in restricted mode say that they're disabled.

2015-07-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_formatter), src/nano.c (allow_pending_sigwinch):
	Reenable SIGWINCH-es also when invoking the formatter fails, and
	correct some comments.
	* src/text.c (do_linter, do_formatter): In restricted mode, no nanorc
	files are read, so no linter or formatter will be defined, so these
	routines will never be called.  Also, the formatter will only ever
	be called when a syntax applies to the current file and this syntax
	defines a formatter, so there is no need to check this again.

2015-07-26  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_replace_loop): When doing regex replacements, find