@@ -418,6 +418,12 @@ current cursor position.
 .B mark
 Sets the mark at the current position, to start selecting text.
 .TP
+.B cutwordleft
+Cuts from the cursor position to the beginning of the preceding word.
+.TP
+.B cutwordright
+Cuts from the cursor position to the beginning of the next word.
+.TP
 .B cutrestoffile
 Cuts all text from the cursor position till the end of the buffer.
 .TP
