@@ -988,6 +988,12 @@ current cursor position.
 @item mark
 Sets the mark at the current position, to start selecting text.
 
+@item cutwordleft
+Cuts from the cursor position to the beginning of the preceding word.
+
+@item cutwordright
+Cuts from the cursor position to the beginning of the next word.
+
 @item cutrestoffile
 Cuts all text from the cursor position till the end of the buffer.
 
