@@ -1,3 +1,10 @@
+2015-07-31  Benno Schulenberg  <bensberg@justemail.net>
+	* src/text.c (do_cutword, do_cut_prev_word, do_cut_next_word),
+	src/global.c (shortcut_init, strtosc), doc/texinfo/nano.texi,
+	doc/man/nanorc.5: Add two new bindable functions, 'cutwordleft'
+	and 'cutwordright', which delete all characters from the cursor
+	to the preceding or succeeding word start.  Fixes bug #32803.
+
 2015-07-30  Benno Schulenberg  <bensberg@justemail.net>
 	* src/global.c (shortcut_init): Don't show ^R and ^T in the help
 	lines in restricted mode (if possible), to give visual feedback.
